<resources>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="filtra">Filtra</string>
    <string name="colori">Colori</string>
    <string name="abbina">Abbina</string>
    <string name="log_in">Log In</string>
    <string name="cosa_vuoi_abbinare">Cosa vuoi abbinare?</string>
    <string name="app_name">SuitUp!</string>
    <string name="armadio">ARMADIO</string>
    <string name="nome">Nome</string>
    <string name="annulla">Annulla</string>
    <string name="tipo">Tipo</string>
    <string name="stagione">Stagione</string>
    <string name="itemEdit">Modifica Capo</string>
    <string name="itemDelete">Elimina Capo</string>
    <string name="failedAuth">Autenticazione fallita</string>
    <string name="successAuth">Benvenuto</string>
    <string name="account_settings">Opzioni</string>
    <string name="loading">Solo un secondo..</string>
    <string name="ok">OK</string>
    <string name="filtra_ricerca">Filtra ricerca</string>
    <string name="ricerca_per">Ricerca per</string>
    <string name="seleziona_colore">Seleziona un colore</string>
    <string name="occasione">Occasione</string>
    <string name="dati_obbligatori">Tutti i dati sono obbligatori!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elimina">Vuoi eliminare il colore?</string>
    <string name="applica">Applica</string>
    <string name="effettuare_logout">Vuoi effettuare il log-out?</string>
    <string name="aggiungi_colore">Aggiungi Colore</string>
    <string name="aggiungi_capo">Aggiungi Capo</string>
    <string name="maglie">Maglie</string>
    <string name="pantaloni">Pantaloni</string>
    <string name="scarpe">Scarpe</string>
    <string name="felpe">Felpe</string>
    <string name="giacche">Giacche</string>
    <string name="abiti">Abito</string>
    <string name="camicie">Camicie</string>
    <string name="gonne">Gonne</string>
    <string name="ecco_il_tuo_outfit">Ecco il tuo outfit di oggi</string>
    <string name="buona_giornata">Buona giornata!</string>
    <string name="tip1">Cerca di non abbinare capi dello stesso colore se non vuoi sembrare Arlecchino! Usa solo dei richiami.</string>
    <string name="tip2">Cerca di prediligere tessuti di qualità! Potresti sembrare uno zingaro..</string>
    <string name="tip3">Se hai difficoltà e sei donna, chiedi a Davide</string>
    <string name="tip4">Ci sono alcuni capi universalmente riconosciuti come must-have del guardaroba, che non subiscono le mode e fungono da passe-partout in mille occasioni.</string>
    <string name="tip5">Considera anche la comodità, soprattutto se devi passare molto tempo fuori.</string>
    <string name="torna_armadio">TORNA ALL\'ARMADIO</string>
    <item name="glide_tag" type="id" />
</resources>
